@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/ruby-gettext
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.89 2012/10/28 16:09:58 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gettext/ChangeLog,v 1.90 2012/11/29 10:42:36 graaff Exp $
+
+*ruby-gettext-2.3.3 (29 Nov 2012)
+
+  29 Nov 2012; Hans de Graaff <graaff@gentoo.org> +ruby-gettext-2.3.3.ebuild:
+  Version bump. Dropped arches due to new test-unit-rr dependency.
 
   28 Oct 2012; Jeroen Roovers <jer@gentoo.org> ruby-gettext-2.2.1.ebuild:
   Marked ~hppa (bug #431290).
